--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,20 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #ffffff;
-    padding: 60px;
+    background-color: #8b3737;
+    color: #a84848;
+    padding: 10px;
     text-align: center;
-    border-bottom: 6px solid #666; 
+    border-bottom: 2px solid #666; 
 }
 
 header h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 4em; 
+    font-size: 3em; 
     margin: 0;
     color: #ffffff; 
     text-transform: uppercase;
+    text-align: center;
 }
 
 section#hero {
@@ -69,7 +70,7 @@ section#about {
 
 section h2 {
     font-family: 'Playfair Display', serif;
-    font-size: 3.5em;
+    font-size: 3.5  em;
     color: #333; 
     text-align: center;
     margin-bottom: 50px;
@@ -77,9 +78,9 @@ section h2 {
 }
 
 section p {
-    font-size: 1.4em; 
+    font-size: 20px; 
     color: #424242; 
-    line-height: 1.8;
+    line-height: 2
     text-align: justify;
 }
 
